Fix bug che truncate() che tagliava alcuni tag troncando i post

--- a/app/assets/stylesheets/styles/overwrites.scss
+++ b/app/assets/stylesheets/styles/overwrites.scss
@@ -290,3 +290,9 @@ hr {
 	}
 }
 
+
+/* CKeditor */
+#cke_post_body {
+		width:100%!important;
+	}
+
